--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile "org.litepal.android:core:1.3.+"
+    compile "com.squareup.okhttp3:okhttp:3.+"
+    compile "com.google.code.gson:gson:2.+"
+    compile 'com.github.bumptech.glide:glide:4.1.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+}
+
+repositories {
+    mavenCentral()
+    maven { url 'https://maven.google.com' }
 }
